solved header overlapping

--- a/src/components/Calendar/style.scss
+++ b/src/components/Calendar/style.scss
@@ -236,3 +236,6 @@ table.MuiTable-root{
 .PrivateTabScrollButton-root {
   width: 0px !important;
 }
+main.makeStyles-mainWrapper-196{
+  margin-top: 40px !important;
+}
